amazon-s3/7.1/modules/ROOT/pages/amazon-s3-connector-upgrade-migrate.adoc
= Upgrading and Migrating Amazon S3 Connector to Version 7.x 
:page-aliases: connectors::amazon/amazon-s3-connector-upgrade-migrate.adoc

Upgrade Anypoint Connector for Amazon S3 (Amazon S3 Connector) to version 7.x.

== Supported Upgrade Paths

[%header,"cols=50a,50a"]
|===
|From Version | To Version
|6.x |7.x
|===

== Changes in This Release

* The AWS SDK is now upgraded to version 2.28.28.

== Requirements

Ensure your system meets the following compatibility requirements before you perform the upgrade:

[%header%autowidth.spread]
|===
|Application/Service|Version
|Mule |4.3.0 and later
|AWS SDK for Java	|2.28.28
|===

== Upgrade Prerequisites

Before you perform the upgrade, create a backup of your files, data, and configuration in case you need to restore to the previous version.

== Upgrade Steps

Follow these steps to perform the upgrade to version 7.x:

. In Anypoint Studio, create a Mule project.
. In the *Mule Palette* view, click *Search in Exchange*.
. In *Add Dependencies to Project*, enter `amazon s3` in the search field.
. In *Available modules*, select *Amazon S3* and click *Add*.
. Click *Finish*.
. Verify that the Amazon S3 dependency version is 7.x in the `pom.xml` file in the Mule project.

Studio upgrades the connector automatically.

== Post-Upgrade Steps

After you install the latest version of the connector, verify that your error handling is updated to work with the minor changes in error codes in this version of the connector.

== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection to verify that the operations work.

== Revert the Upgrade

If it is necessary to revert to the previous version of Amazon S3, change the `mule-amazon-s3` dependency version in the project's `pom.xml` file to the previous version.

You must update the project's `pom.xml` file in Anypoint Studio.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
